--- a/praw.ini
+++ b/praw.ini
@@ -1,5 +1,5 @@
 [YeahBot]
-client_id: kQ-LllZafD8X5Q
-client_secret: wB-SNo-_ImXjPIVCKaFjbobP_Zg
-password: elephantsanddonkeysgrowbigears
-username: yeah_bot_test
+client_id: gZGNheQ3FFswZQ
+client_secret: whHLVVFyZJ3VJ5K7joNmCTHuVd4
+password: a147258b
+username: moldyxorange
