--- a/praw.ini
+++ b/praw.ini
@@ -1,5 +1,5 @@
 [YeahBot]
-client_id: gZGNheQ3FFswZQ
-client_secret: whHLVVFyZJ3VJ5K7joNmCTHuVd4
+client_id: 
+client_secret: 
 password: []
-username: moldyxorange
+username: 
